Scrollbar fix

--- a/client/css/manage-grid.css
+++ b/client/css/manage-grid.css
@@ -1,9 +1,6 @@
 * {
     box-sizing: border-box;
 }
-body {
-    /*overflow-x: hidden;*/
-}
 
 html, body {
     padding: 0;
@@ -42,8 +39,6 @@ html, body {
 	padding-right:0.5em;
 	text-align: right;
 }
-
-/*This is our main wrapping element, it's made 100vh high to ensure it is always the correct size and then moved into place and padded with negative margin and padding*/
 .container {
     display: flex;
     overflow: hidden;
@@ -55,23 +50,15 @@ html, body {
     backface-visibility: hidden;
     will-change: overflow;
 }
-/*All the scrollable sections should overflow and be whatever height they need to be. As they are flex-items (due to being inside a flex container) they could be made to stretch full height at all times if needed.
-WebKit inertia scrolling is being added here for any present/future devices that are able to make use of it.
-*/
-#log-output,
-#log-event {
+
+#log-output, #log-event {
     overflow: auto;
     height: auto;
     padding: .5rem;
     -webkit-overflow-scrolling: touch;
     -ms-overflow-style: none;
 }
-/*Entirely optional – just wanted to remove the scrollbar on WebKit browsers as I find them ugly*/
-#log-output::-webkit-scrollbar,
-#log-event::-webkit-scrollbar {
-    display: none;
-}
-/*  Left and Right are set sizes while the Middle is set to flex one so it occupies all remaining space. This could be set as a width too if prefereable, perhaps using calc.*/
+
 #log-output {
     width: 65%;
     background-color: #22252a;
